--- a/index.html
+++ b/index.html
@@ -3,51 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>學習活動 - 作品分享</title>
-
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>學習活動 - 建立好習慣</title> <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: { sans: ['Inter', 'sans-serif'] },
-                    colors: {
-                        primary: '#F8BBD0',   // 淡粉色
-                        secondary: '#FFF8E1', // 柔和米色 (主背景)
-                        accent: '#E91E63',   // 亮粉色
-                        text: '#424242',     // 深灰色文字
-                        // Ensure all needed grays are defined if not using default Tailwind
-                        gray: { 100: '#F3F4F6', 200: '#E5E7EB', 300: '#D1D5DB', 500:'#6B7280', 600:'#4B5563', 700:'#374151', 800:'#1F2937', 900:'#111827'}
-                    },
-                    borderRadius: { 'xl': '1rem', '2xl': '1.5rem' }
-                }
-            }
-        }
+        tailwind.config = { /* ... (keep your existing config) ... */ }
     </script>
-    </head>
+
+</head>
 <body class="font-sans bg-secondary text-text antialiased">
 
     <div id="particles-js"></div>
 
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#home" class="text-2xl font-bold text-accent hover:text-primary transition duration-300">活動 Logo</a>
-            <div class="hidden md:flex space-x-6">
+            <a href="#home" class="text-2xl font-bold text-accent hover:text-primary transition duration-300">習慣養成計畫</a> <div class="hidden md:flex space-x-6">
                 <a href="#home" class="text-gray-600 hover:text-accent transition duration-300">活動首頁</a>
-                <a href="#student-works" class="text-gray-600 hover:text-accent transition duration-300">作品展示/上傳</a>
-            </div>
+                <a href="#student-works" class="text-gray-600 hover:text-accent transition duration-300">成果展示/上傳</a> </div>
             <button id="mobile-menu-button" class="md:hidden lucide text-gray-600 hover:text-accent transition duration-300" aria-label="開啟選單">&#xe9af;</button>
         </nav>
         <div id="mobile-menu" class="md:hidden hidden bg-white py-2">
             <a href="#home" class="block px-6 py-2 text-gray-600 hover:bg-gray-100 hover:text-accent">活動首頁</a>
-            <a href="#student-works" class="block px-6 py-2 text-gray-600 hover:bg-gray-100 hover:text-accent">作品展示/上傳</a>
+            <a href="#student-works" class="block px-6 py-2 text-gray-600 hover:bg-gray-100 hover:text-accent">成果展示/上傳</a>
         </div>
     </header>
 
@@ -55,78 +37,111 @@
         <section id="home" class="container mx-auto px-6 py-16 md:py-24 fade-in">
              <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2 text-center md:text-left">
-                     <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4 leading-tight">分享你的學習成果！</h1>
-                    <p class="text-lg text-gray-600 mb-8">
-                        歡迎參加本次學習活動！在這裡，你可以上傳並展示你的精彩作品，與大家一同交流成長。
-                    </p>
+                     <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4 leading-tight">開始建立你的好習慣！</h1> <p class="text-lg text-gray-600 mb-8">
+                        分享你的習慣計分卡和創意漫畫，記錄你的成長旅程，一起見證改變的發生。 </p>
                      <a href="#student-works" class="inline-block bg-accent text-white font-semibold px-8 py-3 rounded-xl hover:bg-pink-700 transition duration-300 shadow-lg">
-                        前往作品區
+                        查看或分享成果
                     </a>
                 </div>
                 <div class="md:w-1/2 w-full mt-8 md:mt-0">
-                    <img src="https://placehold.co/600x400/FFF8E1/E91E63?text=學習活動主視覺" alt="色彩繽紛的學習活動插畫" class="rounded-2xl shadow-xl w-full h-auto object-cover">
+                    <div id="hero-slideshow">
+                         <div id="slideshow-placeholder">正在載入分享...</div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section id="student-works" class="py-16 md:py-24 border-t border-gray-200">
             <div class="container mx-auto px-6">
-                <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-12">學生作品展示與上傳</h2>
-
-                <div class="max-w-2xl mx-auto bg-white p-6 md:p-8 rounded-xl shadow-lg mb-16">
-                    <h3 class="text-2xl font-semibold text-gray-700 mb-6 text-center">上傳我的作品</h3>
-                    <form id="upload-form" class="space-y-4" novalidate> <div>
-                            <label for="work-image" class="block text-sm font-medium text-gray-700 mb-1">選擇圖片檔案：</label>
-                            <input type="file" id="work-image" name="work-image" accept="image/png, image/jpeg, image/jpg, image/gif" required
-                                   class="w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-pink-50 file:text-accent hover:file:bg-pink-100 transition duration-150 cursor-pointer border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-accent focus:border-accent">
-                             <p class="mt-1 text-xs text-gray-500">請選擇 JPG, PNG, GIF 格式的圖片，大小限制 16MB。</p>
-                        </div>
+                <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-12">習慣養成成果展示與分享</h2> <div class="max-w-2xl mx-auto bg-white p-6 md:p-8 rounded-xl shadow-lg mb-16">
+                    <h3 class="text-2xl font-semibold text-gray-700 mb-6 text-center">分享我的習慣養成紀錄</h3>
+                    <form id="upload-form" class="space-y-4" novalidate>
                         <div>
-                            <label for="work-description" class="block text-sm font-medium text-gray-700 mb-1">作品介紹：</label>
-                            <textarea id="work-description" name="work-description" rows="3" required maxlength="500"
-                                      class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-accent focus:border-accent shadow-sm text-sm"
-                                      placeholder="簡單介紹一下你的作品吧... (最多 500 字)"></textarea>
+                            <label for="author-name" class="block text-sm font-medium text-gray-700 mb-1">你的姓名/暱稱：</label>
+                            <input type="text" id="author-name" name="author-name" required maxlength="50"
+                                   class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-accent focus:border-accent shadow-sm text-sm"
+                                   placeholder="請輸入你的姓名或暱稱">
                         </div>
+
+                        <div>
+                            <label for="scorecard-image" class="block text-sm font-medium text-gray-700 mb-1">上傳習慣計分卡圖片：</label>
+                            <input type="file" id="scorecard-image" name="scorecard-image" accept="image/png, image/jpeg, image/jpg, image/gif" required
+                                   class="w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-pink-50 file:text-accent hover:file:bg-pink-100 transition duration-150 cursor-pointer border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-accent focus:border-accent">
+                             <p class="mt-1 text-xs text-gray-500">請選擇 JPG, PNG, GIF 格式。 (必需)</p>
+                        </div>
+
+                        <div>
+                            <label for="comic-image" class="block text-sm font-medium text-gray-700 mb-1">上傳六格漫畫圖片：</label>
+                            <input type="file" id="comic-image" name="comic-image" accept="image/png, image/jpeg, image/jpg, image/gif" required
+                                   class="w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-pink-50 file:text-accent hover:file:bg-pink-100 transition duration-150 cursor-pointer border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-accent focus:border-accent">
+                             <p class="mt-1 text-xs text-gray-500">請選擇 JPG, PNG, GIF 格式。 (必需)</p>
+                        </div>
+
+                        <div>
+                            <label for="current-habits" class="block text-sm font-medium text-gray-700 mb-1">你目前的習慣描述：</label>
+                            <textarea id="current-habits" name="current-habits" rows="3" required maxlength="500"
+                                      class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-accent focus:border-accent shadow-sm text-sm"
+                                      placeholder="描述一下你現在主要關注的習慣是什麼..."></textarea>
+                        </div>
+
+                         <div>
+                            <label for="reflection" class="block text-sm font-medium text-gray-700 mb-1">反思與展望：</label>
+                            <textarea id="reflection" name="reflection" rows="4" required maxlength="1000"
+                                      class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-accent focus:border-accent shadow-sm text-sm"
+                                      placeholder="這次過程中，你想養成的好習慣、想改掉的壞習慣是什麼？有什麼發現或心得？"></textarea>
+                        </div>
+
                         <div>
                             <button type="submit"
                                     class="w-full bg-accent text-white font-semibold px-6 py-3 rounded-xl hover:bg-pink-700 transition duration-300 shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-accent disabled:opacity-70 disabled:cursor-not-allowed">
-                                確認上傳
+                                確認分享
                             </button>
                         </div>
                     </form>
-                    <div id="upload-status" class="mt-4 text-center text-sm min-h-[1.25em]"></div> </div>
+                    <div id="upload-status" class="mt-4 text-center text-sm min-h-[1.25em]"></div>
+                </div>
 
                 <hr class="my-12 border-gray-300">
 
-                <h3 class="text-2xl font-semibold text-gray-700 mb-8 text-center">作品畫廊</h3>
-                <div id="work-gallery" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
-                    <p id="gallery-placeholder" class="text-center text-gray-500 col-span-full">正在載入作品...</p>
+                <h3 class="text-2xl font-semibold text-gray-700 mb-8 text-center">大家的成果</h3> <div id="work-gallery" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
+                    <p id="gallery-placeholder" class="text-center text-gray-500 col-span-full">正在載入成果...</p>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="bg-gray-800 text-gray-300 py-10 mt-16">
-         <div class="container mx-auto px-6 text-center">
-             <p>&copy; 2025 學習活動主辦單位. 保留所有權利.</p>
-             <div class="flex justify-center space-x-4 mt-4">
-                 <a href="#" aria-label="Facebook" class="lucide hover:text-primary transition duration-300">&#xea7a;</a>
-                 <a href="#" aria-label="Instagram" class="lucide hover:text-primary transition duration-300">&#xea4c;</a>
-                 <a href="#" aria-label="Twitter" class="lucide hover:text-primary transition duration-300">&#xeac5;</a>
-             </div>
-         </div>
-    </footer>
+         </footer>
 
     <div id="interactive-cat-container" aria-label="互動小貓裝飾">
-        <img id="interactive-cat-img" src="/static/Box.png" alt="互動小貓">
+        <img id="interactive-cat-img" src="/static/Box.png" alt="互動小貓"> </div>
+
+    <div id="work-modal" class="modal">
+        <div class="modal-content">
+            <span class="modal-close" aria-label="關閉視窗">&times;</span>
+            <h3 id="modal-author">作者名稱</h3>
+            <h4>目前的習慣</h4>
+            <p id="modal-current-habits">習慣描述...</p>
+            <h4>反思與展望</h4>
+            <p id="modal-reflection">反思內容...</p>
+             <h4>相關圖片</h4>
+            <div class="modal-image-container">
+                <div class="modal-image-wrapper">
+                    <img id="modal-scorecard-image" src="" alt="習慣計分卡">
+                    <span>習慣計分卡</span>
+                </div>
+                <div class="modal-image-wrapper">
+                    <img id="modal-comic-image" src="" alt="六格漫畫">
+                     <span>六格漫畫</span>
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
-    
     <script src="/static/js/utils.js" defer></script>
-    <script src="/static/js/gallery.js" defer></script>
-    <script src="/static/js/ui.js" defer></script>
-    <script src="/static/js/keep-alive.js" defer></script>
-    <script src="/static/js/main.js" defer></script>
+    <script src="/static/js/gallery.js" defer></script> <script src="/static/js/ui.js" defer></script>     <script src="/static/js/keep-alive.js" defer></script>
+    <script src="/static/js/main.js" defer></script>     </body>
 </html>
